@@ -38,9 +38,9 @@ model.pgmm.list <- c(onestep  = "One step model",
 model.pcce.list <- c(ccemg = "Mean Groups model",
                      ccep  = "Pooled model")
 
-model.pmg.list <- c(md  = "",  # TODO
-                    dmg = "",
-                    cmg = "")
+model.pmg.list <- c(mg  = "Mean Groups model",
+                    dmg = "Demeaned Mean Groups model",
+                    cmg = "Common Correlated Effects Mean Groups model")
 
 inst.method.list <- c(bvk     = "Balestra-Varadharajan-Krishnakumar",
                       baltagi = "Baltagi",
